gccida/g2/optimize_mode_switching
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:1490:1: error: must use 'enum' tag to refer to type 'attr_type'
attr_type attr_type; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:1546:1: error: use of undeclared identifier 'transp_0'; did you mean 'transp'?
transp_0 = sbitmap_vector_alloc( n_basic_blocks, 1u); 
^~~~~~~~
transp
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:889:17: note: 'transp' declared here
static sbitmap *transp;
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:1547:1: error: use of undeclared identifier 'comp_0'; did you mean 'comp'?
comp_0 = sbitmap_vector_alloc( n_basic_blocks, 1u); 
^~~~~~
comp
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:890:17: note: 'comp' declared here
static sbitmap *comp;
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:1548:22: error: use of undeclared identifier 'transp_0'; did you mean 'transp'?
sbitmap_vector_ones( transp_0, n_basic_blocks); 
                     ^~~~~~~~
                     transp
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:889:17: note: 'transp' declared here
static sbitmap *transp;
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:1657:1: error: use of undeclared identifier 'transp_0'; did you mean 'transp'?
transp_0[v55]->elms[0] &= ~1uLL; 
^~~~~~~~
transp
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:889:17: note: 'transp' declared here
static sbitmap *transp;
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:1662:34: error: use of undeclared identifier 'reg_becomes_live_0'; did you mean 'reg_becomes_live'?
note_stores( *( ( rtx *)v8 + 4), reg_becomes_live_0, live_at_edge); 
                                 ^~~~~~~~~~~~~~~~~~
                                 reg_becomes_live
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:993:1: note: 'reg_becomes_live' declared here
reg_becomes_live (reg, setter, live)
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:1684:22: error: use of undeclared identifier 'comp_0'; did you mean 'comp'?
sbitmap_vector_zero( comp_0, n_basic_blocks); 
                     ^~~~~~
                     comp
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:890:17: note: 'comp' declared here
static sbitmap *comp;
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:1689:7: error: use of undeclared identifier 'comp_0'; did you mean 'comp'?
v17 = comp_0; 
      ^~~~~~
      comp
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:890:17: note: 'comp' declared here
static sbitmap *comp;
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:1704:7: error: use of undeclared identifier 'transp_0'; did you mean 'transp'?
v21 = transp_0[v20]; 
      ^~~~~~~~
      transp
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:889:17: note: 'transp' declared here
static sbitmap *transp;
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:1710:30: error: use of undeclared identifier 'transp_0'; did you mean 'transp'?
v23 = pre_edge_lcm( file, 1, transp_0, comp_0, antic, kill, &insert_0, &delete); 
                             ^~~~~~~~
                             transp
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:889:17: note: 'transp' declared here
static sbitmap *transp;
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:1710:40: error: use of undeclared identifier 'comp_0'; did you mean 'comp'?
v23 = pre_edge_lcm( file, 1, transp_0, comp_0, antic, kill, &insert_0, &delete); 
                                       ^~~~~~
                                       comp
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:890:17: note: 'comp' declared here
static sbitmap *comp;
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:1710:62: error: use of undeclared identifier 'insert_0'; did you mean 'insert'?
v23 = pre_edge_lcm( file, 1, transp_0, comp_0, antic, kill, &insert_0, &delete); 
                                                             ^~~~~~~~
                                                             insert
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:892:17: note: 'insert' declared here
static sbitmap *insert;
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:1720:7: error: use of undeclared identifier 'insert_0'; did you mean 'insert'?
v30 = insert_0; 
      ^~~~~~~~
      insert
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:892:17: note: 'insert' declared here
static sbitmap *insert;
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:1758:1: error: use of undeclared identifier 'transp_0'; did you mean 'transp'?
transp_0[index]->elms[0] &= ~1uLL; 
^~~~~~~~
transp
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:889:17: note: 'transp' declared here
static sbitmap *transp;
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:1854:7: error: use of undeclared identifier 'transp_0'; did you mean 'transp'?
free( transp_0); 
      ^~~~~~~~
      transp
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:889:17: note: 'transp' declared here
static sbitmap *transp;
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:1855:7: error: use of undeclared identifier 'comp_0'; did you mean 'comp'?
free( comp_0); 
      ^~~~~~
      comp
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:890:17: note: 'comp' declared here
static sbitmap *comp;
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:1857:7: error: use of undeclared identifier 'insert_0'; did you mean 'insert'?
free( insert_0); 
      ^~~~~~~~
      insert
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/lcm.c:892:17: note: 'insert' declared here
static sbitmap *insert;
                ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_mode_switching/src/obj/lcm.o] Error 1
